analyze_shard_key_jscore_passthrough fails when it encounters CommandOnShardedViewNotSupportedOnMongod errors

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 7.3.4, 7.0.13, 8.0.0-rc11
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Optimization
    • Fully Compatible
    • ALL
    • v8.0, v7.3, v7.0
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The analyzeShardKey command does not support timeseries collections, or views in general (see SERVER-78595 and SPM-3492). In this passthrough suite, there is dedicated code to ignore analyzeShardKey commands that fail due to being run on a timeseries collection (IllegalOperation) or on a view (CommandNotSupportedOnView). This test is failing because we are seeing CommandOnShardedViewNotSupportedOnMongod instead. 

      It seems like there are two ways forward. Either the test should also ignore CommandOnShardedViewNotSupportedOnMongod errors, or the analyzeShardKey command should be reporting this error as IllegalOperation/CommandNotSupportedOnView/something else instead. One argument for the latter is that the error message is kind of a red herring-- a user cannot solve the "Resolved views on collections that do not exclusively live on the db-primary shard must be executed by mongos" problem; the issue is that the command is not allowed on views in the first place.

            Assignee:
            Hana Pearlman (Inactive)
            Reporter:
            Hana Pearlman (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: