SERVER-91859: Don't propagate CommandOnShardedViewNotSupportedOnMongod errors to user in analyzeShardKey command (#23969)

GitOrigin-RevId: 2828dbab34bfed699c7eb9a7bb97309b5eee3115